<resources>
    <string name="app_name">To Do App</string>
    <string name="tNama"> Masukkan nama</string>
    <string name="tPassword"> Masukkan Password</string>
    <string name="tWelcome">Welcome In To Do App</string>
    <string name="bSignIn">Sign-In</string>
    <string name="lnama">Nama</string>
    <string name="lpassword">Password</string>
    <string name="nNewApp">New To Do App?</string>
    <string name="nReg">Register</string>
    <string name="rNama">Masukkan Nama</string>
    <string name="rEmail">Masukkan Email</string>
    <string name="rPassword">Masukkan Password</string>w
    <string name="rrePassword">Masukkan Kembali Password</string>
    <string name="bregister">Register</string>
    <string name="nmUser">Nama User</string>
    <string name="rtask">Masukkan Task</string>
    <string name="rJenisTask">Masukkan Jenis Task</string>
    <string name="rTimetask">Masukkan Lama Task</string>
    <string name="htask">Hasil Task</string>
    <string name="hjenistask">Hasil Jenis Task</string>
    <string name="hLamatask">Hasil Lama Task</string>
    <string name="mnSubmit">Submit</string>
    <string name="mnLogout">Log Out</string>
    <string name="time_task">Time Task</string>


</resources>