<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3BE91E5E">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="165dp"
        android:layout_height="87dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="295dp"
        android:layout_marginRight="295dp"
        android:text="Register"
        android:textColor="#0C756B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="341dp"
        android:layout_marginRight="341dp"
        android:text="Nama"
        android:textColor="#00695C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/edRegNama"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:ems="10"
        android:hint="@string/rNama"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#800630"
        android:background="@drawable/button_shape"

        android:drawableLeft="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="339dp"
        android:layout_marginRight="339dp"
        android:text="Email"
        android:textColor="#00695C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edRegNama" />

    <EditText
        android:id="@+id/edRegEmail"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:ems="10"
        android:hint="@string/rEmail"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#800630"
        android:background="@drawable/button_shape"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="313dp"
        android:layout_marginRight="313dp"
        android:text="Password"
        android:textColor="#0C756B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edRegEmail" />

    <EditText
        android:id="@+id/edRegPass"
        android:layout_width="341dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/button_shape"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:ems="10"
        android:hint="@string/rPassword"
        android:inputType="textPersonName"
        android:textColor="#FDFDFD"
        android:textColorHint="#795548"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="288dp"
        android:layout_marginRight="288dp"
        android:text="Re-Password"
        android:textColor="#0C756B"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edRegPass" />

    <EditText
        android:id="@+id/edRerePass"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:background="@drawable/button_shape"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/rrePassword"
        android:inputType="textPersonName"
        android:textColor="#FDFCFC"
        android:textColorHint="#800630"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/edRegButton"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:hint="@string/bregister"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#CBCA1251"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edRerePass" />

</androidx.constraintlayout.widget.ConstraintLayout>